# 2D-Top-down-shooter

./: .gitignore  CMakeLists.txt  README.md
2D-Top-down-shooter/: 2D-Top-down-shooter.cpp
docs/: Documentation.docx
misc/: game.mdj  sprite.mdj
src/: 2D-Top-down-shooter.cpp  2D-Top-down-shooter.sln  2D-Top-down-shooter.vcxproj  2D-Top-down-shooter.vcxproj.filters  Bullet.cpp  Bullet.h  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  IDrawable.h  MenuObject.cpp  MenuObject.h  Player.cpp  Player.h  RgbImage.cpp  RgbImage.h  Sprite.cpp  Sprite.h
